# BitMod--AI-Inference-Cache-Semantic-Reuse-Engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  bitmod.yaml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml
core/: pyproject.toml
core/bitmod/: __init__.py  __main__.py  action_plans.py  api.py  audit.py  auth.py  backup.py  benchmark.py  blocks.py  cache_engine.py  cache_qualify.py  cli.py  config.py  crypto.py  intent.py  invalidation.py  messaging_bridge.py  metrics.py  middleware.py  migrations.py  namespaces.py  observability.py  output_filter.py  pricing.json  pricing.py  roles.py  roles.yaml  router.py  schemas.py  security.py  session.py  setup.py  tags.py  tool_layer.py  usage.py  vector_index.py
core/bitmod/adapters/: __init__.py  db_mongodb.py  db_mysql.py  db_postgresql.py  db_sqlite.py  embed_cohere.py  embed_local.py  embed_ollama.py  embed_openai.py  llm_anthropic.py  llm_azure_openai.py  llm_bedrock.py  llm_gemini.py  llm_huggingface.py  llm_mistral.py  llm_ollama.py  llm_openai.py  llm_openai_compat.py  llm_openrouter.py  llm_perplexity.py  llm_xai.py  msg_discord.py  msg_matrix.py  msg_slack.py  msg_telegram.py  msg_whatsapp.py  vec_chroma.py  vec_pinecone.py  vec_qdrant.py
core/bitmod/ingestion/: __init__.py  chunker.py  parser.py  pipeline.py
core/bitmod/intents/: __init__.py  analyze.yaml  brainstorm.yaml  cite.yaml  compare.yaml  convert.yaml  create.yaml  draft.yaml  execute.yaml  explain.yaml  extract.yaml  hypothesize.yaml  list.yaml  summarize.yaml  think.yaml  write.yaml
core/bitmod/interfaces/: __init__.py  database.py  embeddings.py  llm.py  messaging.py  vectors.py
core/bitmod/project/: __init__.py  context.py  indexer.py  language.py  memory.py  watcher.py
core/bitmod/proxy/: __init__.py  anthropic_format.py  app.py  base.py  gemini_format.py  openai_format.py
db/migrations/: 001_init.sql  002_add_content_blocks.py  003_add_cache_embeddings.py  004_add_proxy_metadata.py  005_add_usage_and_namespaces.py  006_add_project_knowledge.py  007_cache_ttl.py  008_audit_events.py  009_flexible_embeddings.py  010_cohesive_cache.py  011_cache_hardening.py
deploy/: README.md  docker-compose.yaml
deploy/helm/bitmod/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
deploy/helm/bitmod/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-chat.yaml  deployment-gateway.yaml  ingress.yaml  migration-job.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service-chat.yaml  service-gateway.yaml  serviceaccount.yaml
deploy/monitoring/: alerts.yml  grafana-dashboard.json
docs/: CACHE_ARCHITECTURE.md  COMPLEMENTARY_TECH.md  DATA_RETENTION.md
docs/adr/: 001-hexagonal-architecture.md  002-sqlite-default-backend.md  003-yaml-driven-intents.md
docs/runbooks/: api-key-compromise.md  cache-poisoning.md  data-breach.md  dependency-compromise.md  service-outage.md
examples/: README.md  basic_usage.py  cli_scripting.sh  custom_provider.py  docker_quickstart.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/bitmod_client/: __init__.py  client.py  exceptions.py  models.py
services/chat/: Dockerfile  requirements.txt
services/chat/app/: main.py
services/frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
services/frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
services/frontend/app/admin/: layout.tsx  page.tsx
services/frontend/app/architecture/: page.tsx
services/frontend/app/assembly-engine/: page.tsx
services/frontend/app/cache-engine/: page.tsx
services/frontend/app/changelog/: page.tsx
services/frontend/app/code-of-conduct/: page.tsx
services/frontend/app/contact/: page.tsx
services/frontend/app/contributing/: page.tsx
services/frontend/app/docs/: page.tsx
services/frontend/app/guides/: page.tsx
services/frontend/app/integrations/: page.tsx
services/frontend/app/playground/: layout.tsx  page.tsx
services/frontend/app/roadmap/: page.tsx
services/frontend/app/security/: page.tsx
services/frontend/app/sponsor/: page.tsx
services/frontend/app/support/: page.tsx
services/frontend/components/: animated-logo.tsx  animated-wordmark.tsx  brand-ticker.tsx  copy-button.tsx  footer.tsx  hero-wordmark.tsx  icons.tsx  navbar.tsx  scroll-to-top.tsx  terminal-logo.tsx
services/frontend/components/shared/: code-block.tsx  (+1 more)
services/frontend/lib/: admin-data.ts
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: main.py
tests/: conftest.py  load_test.py  overnight_runner.py  self_healing_runner.py  test_action_plans.py  test_adapters_expanded.py  test_adapters_factory.py  test_adapters_llm.py  test_api.py  test_audit.py  test_auth.py  test_blocks.py  test_cache_advanced.py  test_cache_engine.py  test_cache_qualify.py  test_cache_ttl.py  test_chunker.py  test_cli_basic.py  test_cli_expanded.py  test_config.py  test_config_expanded.py  test_crypto.py  test_crypto_integration.py  test_e2e_ingest.py  test_evidence.py  test_gateway_endpoints.py  test_ingestion.py  test_ingestion_expanded.py  test_integration_500.py  test_integration_endpoints.py  test_intent.py  test_invalidation.py  test_jwt.py  test_live_llm.py  test_mechanism_accuracy.py  test_middleware.py  test_namespaces.py  test_openai_compat_adapter.py  test_output_filter.py  test_pipeline_integration.py  (+18 more)
tests/benchmark/: run_50k_benchmark.py  run_benchmark.py
tests/mega/: download_dataset.py  download_million.py  run_mega_test.py  run_million_test.py
tests/sample_data/: blockchain_technology.txt  cloud_computing.txt  cybersecurity_fundamentals.txt  data_privacy_regulations.txt  technology_overview.txt
tests/stress/: load_runner.py  metrics_reporter.py  prompt_generator.py
(+15 files in other folders)
