[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "bitmod"
version = "0.2.0"  # Keep in sync with core/bitmod/__init__.py
description = "Modular AI Data Infrastructure — Compute once, serve forever."
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "BitMod Contributors" },
]
keywords = ["ai", "caching", "rag", "llm", "infrastructure", "data", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies — minimal, works everywhere with SQLite + local mode
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# --- Database Backends ---
postgres = [
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
mysql = [
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
]
mongodb = ["pymongo>=4.6.0"]

# --- LLM Providers ---
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.0.0"]
ollama = ["ollama>=0.3.0"]
gemini = ["google-generativeai>=0.5.0"]

# --- Embedding Providers ---
embeddings = ["sentence-transformers>=2.2.0"]
cohere = ["cohere>=5.0.0"]

# --- Vector Stores ---
chroma = ["chromadb>=0.4.0"]
qdrant = ["qdrant-client>=1.7.0"]
pinecone = ["pinecone>=5.0.0"]

# --- Document Ingestion ---
pdf = ["pymupdf>=1.23.0"]
docx = ["python-docx>=1.0.0"]
html = ["beautifulsoup4>=4.12.0"]
ingestion = [
    "bitmod[pdf,docx,html]",
]

# --- Observability ---
structlog = ["structlog>=24.0.0"]
redis = ["redis>=5.0.0"]
metrics = ["prometheus-client>=0.20.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

# --- Server (for `bitmod serve`) ---
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sse-starlette>=2.0.0",
]

# --- Bundles ---
all = [
    "bitmod[postgres,mysql,mongodb,anthropic,openai,ollama,gemini,embeddings,cohere,chroma,qdrant,pinecone,ingestion,server,redis,metrics,otel]",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "structlog>=24.0.0",
]

# --- Common production setup ---
recommended = [
    "bitmod[anthropic,postgres,embeddings,ingestion,server,structlog]",
]

[project.urls]
Homepage = "https://bitmod.io"
Repository = "https://github.com/BitModerator/bitmod"
Documentation = "https://docs.bitmod.io"

[project.scripts]
bitmod = "bitmod.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["core/bitmod"]

[tool.hatch.build.targets.sdist]
include = [
    "core/bitmod/**/*.py",
    "core/bitmod/py.typed",
    "core/bitmod/**/*.yaml",
    "core/bitmod/**/*.json",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false  # Optional deps (numpy, sqlalchemy) change which ignores are needed
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring a running API (deselect with '-m \"not e2e\"')",
]
