# This pyproject.toml is kept for backward compatibility.
# The canonical pyproject.toml is at the repository root: /pyproject.toml
# which uses hatchling and points to core/ as the package source directory.

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "bitmod"
version = "0.2.0"
description = "Modular AI Data Infrastructure — Compute once, serve forever."
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "../README.md"
authors = [
    { name = "BitMod Contributors" },
]
keywords = ["ai", "caching", "rag", "llm", "infrastructure", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
]

[project.scripts]
bitmod = "bitmod.cli:main"

[tool.setuptools.packages.find]
include = ["bitmod*"]
