[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitmod-client"
version = "0.2.0"  # Keep in sync with core/bitmod/__init__.py
description = "Official Python SDK for BitMod — Intelligent AI Cache Infrastructure"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "BitMod", email = "sdk@bitmod.io" }]
keywords = ["bitmod", "ai", "cache", "llm", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
all = ["openai>=1.0.0", "anthropic>=0.30.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://bitmod.io"
Documentation = "https://docs.bitmod.io/sdk/python"
Repository = "https://github.com/BitModerator/bitmod"

[tool.hatch.build.targets.wheel]
packages = ["src/bitmod_client"]
